--- a/threetier.yaml
+++ b/threetier.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: "mohanraz81/backend1805"
+          image: "pradeepkr067/backend"
           ports:
             - name: http
               containerPort: 80
@@ -76,7 +76,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: "mohanraz81/frontend1805"
+        image: "pradeepkr067/frontend"
         ports:
           - name: http
             containerPort: 80
