--- a/createdb.yaml
+++ b/createdb.yaml
@@ -5,7 +5,7 @@
       ec2_group:
         name: dbsg
         description: an example EC2 group
-        vpc_id: vpc-3e94a045
+        vpc_id: vpc-0123a2f1cc57bc0df
         region: us-east-1
         rules:
           - proto: tcp
@@ -21,8 +21,8 @@
         name: dbsubnet
         description: My Fancy Ex Parrot Subnet Group
         subnets:
-          - subnet-ad778c83
-          - subnet-e8d25ea2
+          - subnet-0f20df7d7f9b8e57f
+          - subnet-0f112c0b8ae35faad
       register: dbsubnet
     - debug:
         var: dbsubnet
